--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
 
           <script src="app.js"></script>
           <script src="https://cdn.jsdelivr.net/gh/bigdatacloudapi/js-reverse-geocode-client@latest/bigdatacloud_reverse_geocode.min.js" type="text/javascript"></script>
-          <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAw3D0_Iqhb_TEsJ1d1QnHnVX-nR48sbaA&libraries=places"></script>
+          <script async src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"></script>
         </div>
     </body>
 </html>
